# src/storage/api-docs/api-docs.yaml
@@ -52,6 +52,8 @@ paths:
     $ref: 'items-itemId-path.yaml'
   /items/{ItemId}/htrdata:
     $ref: 'items-itemId-htrdata-path.yaml'
+  /items/{ItemId}/autoenrichments:
+    $ref: 'items-itemId-autoenrichments-path.yaml'
 
   /users/{UserId}/htrdata:
     $ref: 'users-userId-htrdata-path.yaml'
@@ -60,11 +62,13 @@ paths:
     $ref: 'stories-path.yaml'
   /stories/{StoryId}:
     $ref: 'stories-storyId-path.yaml'
+  /stories/{StoryId}/autoenrichments:
+    $ref: 'stories-storyId-autoenrichments-path.yaml'
 
   /autoenrichments:
     $ref: 'autoenrichments-path.yaml'
   /autoenrichments/{AutoEnrichmentId}:
-    $ref: 'autoenrichments-autoenrichmentId-path.yaml'
+    $ref: 'autoenrichments-autoenrichmentsid-path.yaml'
   
 
 components:
